@@ -16,6 +16,7 @@
 
 - [[https://github.com/d12frosted/vino/issues/96][vino#96]] Allow to create grape synonyms during =vino-entry-read=.
 - =vino-db= functionality with two tables - =cellar= and =ratings=.
+- [[https://github.com/d12frosted/vino/issues/97][vino#97]] =vino-entry-note-get-dwim= also gets wine from the rating note.
 
 *Breaking changes*
 
